# posttrainrepo-humaneval

./: .gitignore  README.md  program.md  pyproject.toml  sitecustomize.py
.github/workflows/: ci.yml
docs/: architecture.md  contributing.md  eval.md  model.md
recipes/magicoder_hybrid_completion/: README.md  run.sh
recipes/magicoder_oss_completion/: README.md  run.sh
recipes/magicoder_oss_native/: README.md  run.sh
recipes/mbpp_lora_sft/: README.md  run.sh
recipes/mbpp_lora_sft_200/: README.md  run.sh
recipes/mbpp_lora_sft_doc2/: README.md  run.sh
recipes/mbpp_lora_sft_low_lr/: README.md  run.sh
recipes/mbpp_sft_binary_grpo/: README.md  run.sh
recipes/mbpp_sft_staged_grpo/: README.md  run.sh
recipes/mbpp_sft_staged_grpo_safe/: README.md  run.sh
src/: train_magicoder_sft.py  train_mbpp_sft.py  train_mbpp_sft_grpo.py
