[project]
name = "posttrainrepo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

# Dev-only tooling (lint in CI). Kept out of [project.dependencies] so the
# agent's training environment stays clean — declare training deps with `uv add`.
[dependency-groups]
dev = ["ruff>=0.6"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
